#336: adds scripts to build linux artefacts